--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A simple wrapper library around SimpleXml's simplexml_load_file() and simplexml_load_string() functions. Provides LibXMLError handling.",
     "type": "library",
     "require": {
-        "ext-SimpleXML": "^0.1.0"
+        "ext-SimpleXML": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2"
