--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
     "require-dev": {
         "phpunit/phpunit": "^6.2"
     },
+    "autoload": {
+        "psr-4": {
+            "BorislavSabev\\SimpleXmlLoader\\": "src/"
+        }
+    },
     "authors": [
         {
             "name": "Borislav Sabev",
